--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -3,16 +3,16 @@
   text-align: center;
 }
 
-// Center the CTA shortcode button
-.cta-group {
-  justify-content: center;
-}
+// // Center the CTA shortcode button
+// .cta-group {
+//   justify-content: center;
+// }
 
-.btn-primary {
-  color: #f9e09e;
-  // background-color: #53868b;
-}
+// .btn-primary {
+//   color: #f9e09e;
+//   // background-color: #53868b;
+// }
 
-.btn-primary:hover {  
-  color: #000;
-}
+// .btn-primary:hover {  
+//   color: #000;
+// }
